Updated Galician translation and changed the verb "estabrecer" to "establecer"

--- a/po/gl.po
+++ b/po/gl.po
@@ -1,6 +1,6 @@
 # Galician translation of dpkg
 # Copyright (C) 2005 Software in the Public Interest, Inc.
-# Jacobo Tarrío <jtarrio@debian.org>, 2005, 2006.
+# Jacobo Tarrío <jtarrio@debian.org>, 2005, 2006, 2007.
 # Héctor Fernández López <trorrr@yahoo.es>, 2000.
 #
 msgid ""
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-05-15 15:52+0300\n"
-"PO-Revision-Date: 2006-08-18 09:52+0200\n"
+"PO-Revision-Date: 2007-05-24 10:11+0200\n"
 "Last-Translator: Jacobo Tarrío <jtarrio@debian.org>\n"
-"Language-Team: Galician <trasno@ceu.fi.udc.es>\n"
+"Language-Team: Galician <proxecto@trasno.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -58,9 +58,9 @@ msgid "Signal no.%d"
 msgstr "Sinal número %d"
 
 #: lib/compression.c:34
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec '%s %s'"
-msgstr "%s: non se puido executar gzip %s"
+msgstr "%s: non se puido executar \"%s %s\""
 
 #: lib/compression.c:62
 #, c-format
@@ -238,7 +238,7 @@ msgstr "non se puido abrir \"%s\" para gravar información de \"%s\""
 
 #: lib/dump.c:296
 msgid "unable to set buffering on status file"
-msgstr "non se pode estabrecer o buffer do ficheiro de estado"
+msgstr "non se pode establecer o buffer do ficheiro de estado"
 
 #: lib/dump.c:307
 #, c-format
@@ -590,7 +590,7 @@ msgstr "non se puido ler os modificadores do descritor de ficheiros de %.250s"
 #: lib/mlib.c:147
 #, c-format
 msgid "unable to set close-on-exec flag for %.250s"
-msgstr "non se puido estabrecer o modificador close-on-exec de %.250s"
+msgstr "non se puido establecer o modificador close-on-exec de %.250s"
 
 #: lib/mlib.c:199
 #, c-format
@@ -916,17 +916,17 @@ msgstr "erro ao ler da canle de dpkg-deb"
 #: src/archives.c:266
 #, c-format
 msgid "error setting timestamps of `%.255s'"
-msgstr "erro ao estabrecer as marcas de tempo de \"%.255s\""
+msgstr "erro ao establecer as marcas de tempo de \"%.255s\""
 
 #: src/archives.c:273 src/archives.c:618
 #, c-format
 msgid "error setting ownership of `%.255s'"
-msgstr "erro ao estabrecer o propietario de \"%.255s\""
+msgstr "erro ao establecer o propietario de \"%.255s\""
 
 #: src/archives.c:275 src/archives.c:621
 #, c-format
 msgid "error setting permissions of `%.255s'"
-msgstr "erro ao estabrecer os permisos de \"%.255s\""
+msgstr "erro ao establecer os permisos de \"%.255s\""
 
 #: src/archives.c:368
 #, c-format
@@ -1027,7 +1027,7 @@ msgstr "erro ao crear a ligazón simbólica \"%.255s\""
 #: src/archives.c:663 src/archives.c:668
 #, c-format
 msgid "error setting ownership of symlink `%.255s'"
-msgstr "erro ao estabrecer o propietario da ligazón simbólica \"%.255s\""
+msgstr "erro ao establecer o propietario da ligazón simbólica \"%.255s\""
 
 #: src/archives.c:674
 #, c-format
@@ -1136,7 +1136,7 @@ msgstr "dpkg: o paquete %s precisa dunha reinstalación, non se ha eliminar.\n"
 #: src/archives.c:903
 #, c-format
 msgid "package %s has too many Conflicts/Replaces pairs"
-msgstr ""
+msgstr "o paquete %s ten demasiadas parellas Conflicts/Replaces"
 
 #: src/archives.c:909
 #, c-format
@@ -1441,7 +1441,7 @@ msgstr ""
 #, c-format
 msgid "unable to set mode of new dist conffile `%.250s'"
 msgstr ""
-"non se pode estabrecer o modo do novo ficheiro de configuración \"%.250s\""
+"non se pode establecer o modo do novo ficheiro de configuración \"%.250s\""
 
 #: src/configure.c:468
 #, c-format
@@ -1608,39 +1608,39 @@ msgid "unable to check for existence of `%.250s'"
 msgstr "non se pode comprobar a existencia de \"%.250s\""
 
 #: src/depcon.c:156
-#, fuzzy, c-format
+#, c-format
 msgid "%s depends on %s"
-msgstr " depende de "
+msgstr "%s depende de %s"
 
 #: src/depcon.c:159
-#, fuzzy, c-format
+#, c-format
 msgid "%s pre-depends on %s"
-msgstr " pre-depende de "
+msgstr "%s pre-depende de %s"
 
 #: src/depcon.c:162
-#, fuzzy, c-format
+#, c-format
 msgid "%s recommends %s"
-msgstr " recomenda "
+msgstr "%s recomenda %s"
 
 #: src/depcon.c:165
-#, fuzzy, c-format
+#, c-format
 msgid "%s suggests %s"
-msgstr " suxire "
+msgstr "%s suxire %s"
 
 #: src/depcon.c:168
-#, fuzzy, c-format
+#, c-format
 msgid "%s breaks %s"
-msgstr " rompe "
+msgstr "%s rompe %s"
 
 #: src/depcon.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s conflicts with %s"
-msgstr " ten conflictos con "
+msgstr "%s ten conflictos con %s"
 
 #: src/depcon.c:174
-#, fuzzy, c-format
+#, c-format
 msgid "%s enhances %s"
-msgstr " mellora "
+msgstr "%s mellora %s"
 
 #: src/depcon.c:269
 #, c-format
@@ -2073,7 +2073,7 @@ msgstr "sen instalar pero hai ficheiros de configuración"
 
 #: src/help.c:87
 msgid "dpkg - error: PATH is not set.\n"
-msgstr "dpkg - erro: a variable de ambiente PATH non está estabrecida.\n"
+msgstr "dpkg - erro: a variable de ambiente PATH non está establecida.\n"
 
 #: src/help.c:102
 #, c-format
@@ -2107,7 +2107,7 @@ msgstr "non se pode ignorar o sinal %s antes de executar o script"
 #: src/help.c:254
 #, c-format
 msgid "unable to set execute permissions on `%.250s'"
-msgstr "non se poden estabrecer permisos de execución en \"%.250s\""
+msgstr "non se poden establecer permisos de execución en \"%.250s\""
 
 #: src/help.c:299
 #, c-format
@@ -2247,7 +2247,7 @@ msgstr ""
 "  -r|--remove        <paquete> ... | -a|--pending\n"
 "  -P|--purge         <paquete> ... | -a|--pending\n"
 "  --get-selections [<patrón> ...]  Amosa a lista de seleccións.\n"
-"  --set-selections                 Estabrece as seleccións de paquetes.\n"
+"  --set-selections                 Establece as seleccións de paquetes.\n"
 "  --clear-selections               Deselecciona os paquetes non esenciais.\n"
 "  --update-avail <ficheiro Packages>\n"
 "                                   Substitúe a información de paquetes\n"
@@ -2529,7 +2529,7 @@ msgstr ""
 "  parar cun erro:        --refuse-<cousa>,<cousa>,... | --no-force-"
 "<cousa>,...\n"
 " Forzar cousas:\n"
-"  all [!]              Estabrece tódalas opcións de forzado\n"
+"  all [!]              Establece tódalas opcións de forzado\n"
 "  downgrade [*]        Substitúe un paquete por unha versión anterior\n"
 "  configure-any        Configura un paquete que poida axudar a estte\n"
 "  hold                 Procesa os paquetes incidentais mesmo se están "
@@ -2885,13 +2885,13 @@ msgid "unable to stat other new file `%.250s'"
 msgstr "non se atopou outro ficheiro novo \"%.250s\""
 
 #: src/processarc.c:674
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - old file `%.250s' is the same as several new files!  (both `"
 "%.250s' and `%.250s')\n"
 msgstr ""
 "dpkg: aviso - o ficheiro antigo \"%.250s\" é o mesmo que varios ficheiros "
-"novos (\"%.250s\" e \"%.250s\")"
+"novos (\"%.250s\" e \"%.250s\")\n"
 
 #: src/processarc.c:715
 #, c-format
@@ -3375,7 +3375,7 @@ msgstr "dpkg-deb - erro: %s (\"%s\") non contén ningún díxito\n"
 #: dpkg-deb/build.c:111
 #, c-format
 msgid "file name '%.50s...' is too long"
-msgstr ""
+msgstr "o nome de ficheiro \"%.50s...\" é longo de máis"
 
 #: dpkg-deb/build.c:172
 msgid "--build needs a directory argument"
@@ -3742,7 +3742,7 @@ msgstr "non se puido obter a posición actual no ficheiro"
 
 #: dpkg-deb/extract.c:237
 msgid "failed setting the current file position"
-msgstr "non se puido estabrecer a posición actual no ficheiro"
+msgstr "non se puido establecer a posición actual no ficheiro"
 
 #: dpkg-deb/extract.c:246
 msgid "failed to open pipe descriptor `1' in paste"
@@ -3960,7 +3960,7 @@ msgstr ""
 "\n"
 
 #: dpkg-deb/main.c:85
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --showformat=<format>            Use alternative format for --show.\n"
@@ -3981,9 +3981,9 @@ msgstr ""
 "  --old, --new               Escolle o formato do arquivo.\n"
 "  --nocheck                  Suprime a comprobación do ficheiro de control\n"
 "                                (constrúe un paquete incorrecto).\n"
-"  -z#                        Estabrece o nivel de compresión.\n"
-"  -Z<tipo>                   Estabrece o tipo de compresión.\n"
-"                             Admítense: gzip, bzip2, none (ningún).\n"
+"  -z#                        Establece o nivel de compresión do paquete.\n"
+"  -Z<tipo>                   Establece o tipo de compresión do paquete.\n"
+"                               Admítense: gzip, bzip2, lzma, none (ningún).\n"
 "\n"
 
 #: dpkg-deb/main.c:106
@@ -4582,7 +4582,7 @@ msgstr ""
 "  --divert <desviar-a>     o nome empregado polas versións de outros "
 "paquetes.\n"
 "  --rename                 aparta ou recupera o ficheiro.\n"
-"  --admindir <directorio>  estabrece o directorio do ficheiro de desvíos.\n"
+"  --admindir <directorio>  establece o directorio do ficheiro de desvíos.\n"
 "  --test                   non fai nada; só o amosa.\n"
 "  --quiet                  operación sen silenciosa, saída mínima.\n"
 "  --help                   amosa esta mensaxe de axuda.\n"
@@ -4594,9 +4594,9 @@ msgstr ""
 
 #: scripts/dpkg-divert.pl:78 scripts/dpkg-statoverride.pl:62
 #: scripts/update-alternatives.pl:233
-#, fuzzy, perl-format
+#, perl-format
 msgid "two commands specified: %s and --%s"
-msgstr "especificáronse dous modos: %s e --%s"
+msgstr "especificáronse dúas ordes: %s e --%s"
 
 #: scripts/dpkg-divert.pl:111
 #, perl-format
@@ -4817,7 +4817,7 @@ msgstr ""
 "  --list [<patrón>]        amosa as substitucións actuais da base de datos.\n"
 "\n"
 "Opcións:\n"
-"  --admindir <directorio>  estabrece o directorio do ficheiro statoverride.\n"
+"  --admindir <directorio>  establece o directorio do ficheiro statoverride.\n"
 "  --update                 actualiza de inmediato os permisos dos "
 "ficheiros.\n"
 "  --force                  forza unha acción incluso se algo non está ben.\n"
@@ -4971,8 +4971,8 @@ msgstr ""
 "                           grava a nova entrada na sección que encaixa coa\n"
 "                           expresión regular ou crea unha nova co título\n"
 "                           indicado se non existe.\n"
-"  --menuentry=<texto>      estabrece a entrada do menú.\n"
-"  --description=<texto>    estabrece a descrición para a entrada do menú.\n"
+"  --menuentry=<texto>      establece a entrada do menú.\n"
+"  --description=<texto>    establece a descrición para a entrada do menú.\n"
 "  --info-file=<ruta>       indica o ficheiro info a instalar no directorio.\n"
 "  --dir-file=<ruta>        indica o nome do ficheiro do directorio de info.\n"
 "  --infodir=<directorio>   igual que \"--dir-file=<directorio>/dir\".\n"
@@ -5157,7 +5157,7 @@ msgstr ""
 "Copyright (C) 2000-2002 Wichert Akkerman."
 
 #: scripts/update-alternatives.pl:78
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -5208,14 +5208,14 @@ msgstr ""
 "  --auto <nome>            cambia a ligazón mestra <nome> ao modo "
 "automático.\n"
 "  --display <nome>         amosa información sobre o grupo <nome>.\n"
-"  --list <nome>            amosa tódolos obxectivos do grupo <nome>.\n"
+"  --list <nome>            amosa tódolos destinos do grupo <nome>.\n"
 "  --config <nome>          amosa as alternativas do grupo <nome> e pregunta\n"
 "                           ao usuario cal empregar.\n"
-"  --set <nome> <ruta>      estabrece <ruta> coma unha alternativa de "
+"  --set <nome> <ruta>      establece <ruta> coma unha alternativa de "
 "<nome>.\n"
 "  --all                    executa --config en tódalas alternativas.\n"
 "\n"
-"<ligazón> é a ligazón que apunta a /etc/alternatives/<nome>.\n"
+"<ligazón> é a ligazón que apunta a %s/<nome>.\n"
 "  (p. ex. /usr/bin/pager)\n"
 "<nome> é o nome mestre deste grupo de ligazóns.\n"
 "  (p. ex. pager)\n"
@@ -5235,7 +5235,7 @@ msgstr ""
 
 #: scripts/update-alternatives.pl:131
 msgid "invalid update mode"
-msgstr ""
+msgstr "modo de actualización non válido"
 
 #: scripts/update-alternatives.pl:135
 #, perl-format
@@ -5376,7 +5376,7 @@ msgstr "Non hai alternativas para %s."
 #: scripts/update-alternatives.pl:362
 #, perl-format
 msgid "Setting up automatic selection of %s."
-msgstr "A estabrecer a selección automática de %s."
+msgstr "A establecer a selección automática de %s."
 
 #: scripts/update-alternatives.pl:365 scripts/update-alternatives.pl:367
 #: scripts/update-alternatives.pl:481 scripts/update-alternatives.pl:483
@@ -5527,13 +5527,13 @@ msgid "Removing %s (%s), not appropriate with %s."
 msgstr "A eliminar %s (%s); non é apropiado con %s."
 
 #: scripts/update-alternatives.pl:635
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "There is no program which provides %s.\n"
 "Nothing to configure.\n"
 msgstr ""
-"Só hai un programa que forneza %s\n"
-"(%s). Non hai nada que configurar.\n"
+"Só hai ningún programa que forneza %s.\n"
+"Non hai nada que configurar.\n"
 
 #: scripts/update-alternatives.pl:641
 #, perl-format
@@ -5796,7 +5796,7 @@ msgstr "Problema grave: %s"
 #~ "  -r|--remove        <paquete> ... | -a|--pending\n"
 #~ "  -P|--purge         <paquete> ... | -a|--pending\n"
 #~ "  --get-selections [<patrón> ...]      Amosa a lista de seleccións.\n"
-#~ "  --set-selections                     Estabrece as seleccións de "
+#~ "  --set-selections                     Establece as seleccións de "
 #~ "paquetes.\n"
 #~ "  --clear-selections                   Deselecciona os paquetes non "
 #~ "esenciais.\n"
@@ -5968,8 +5968,8 @@ msgstr "Problema grave: %s"
 #~ "  --nocheck                  Suprime a comprobación do ficheiro de "
 #~ "control\n"
 #~ "                                (constrúe un paquete incorrecto).\n"
-#~ "  -z#                        Estabrece o nivel de compresión.\n"
-#~ "  -Z<tipo>                   Estabrece o tipo de compresión.\n"
+#~ "  -z#                        Establece o nivel de compresión.\n"
+#~ "  -Z<tipo>                   Establece o tipo de compresión.\n"
 #~ "                             Admítense: gzip, bzip2, none (ningún).\n"
 #~ "\n"
 
