--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ dpkg (1.14.4) UNRELEASED; urgency=low
     Thanks to Kylan Robinson. Closes: #425629
   * Revert change on 1.14.0 from Aaron M. Ucko. Trim down duped entries only
     when passing them to dpkg-query instead. Closes: #425641
+  * Recognize again architecture wildcards. Closes: #424670
 
   [ Updated dpkg translations ]
   * French (Frédéric Bothamy).
