--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.4) UNRELEASED; urgency=low
+dpkg (1.14.4) unstable; urgency=low
 
   [ Guillem Jover ]
   * Fix perl warnings:
@@ -13,10 +13,11 @@ dpkg (1.14.4) UNRELEASED; urgency=low
   * Recognize again architecture wildcards. Closes: #424670
 
   [ Updated dpkg translations ]
-  * French (Frédéric Bothamy).
   * Basque (Piarres Beobide). Closes: #425776
+  * French (Frédéric Bothamy).
+  * Galician (Jacobo Tarrío).
 
- -- Guillem Jover <guillem@debian.org>  Tue, 15 May 2007 16:35:25 +0300
+ -- Guillem Jover <guillem@debian.org>  Thu, 24 May 2007 19:30:26 +0300
 
 dpkg (1.14.3) unstable; urgency=low
 
