--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-05-24  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.14.4.
+
+2007-05-24  Guillem Jover  <guillem@debian.org>
+
 	* scripts/controllib.pl (debarch_to_debtriplet): Match exactly 'any'
 	or 'all', recognize again 'linux-<arch>', and do not accept unknown
 	debtriplets.
@@ -9,10 +13,10 @@
 
 2007-05-23  Guillem Jover  <guillem@debian.org>
 
-	Revert commit on 2007-04-28 by Aaron M. Ucko  <ucko@debian.org>.
+	Revert commit on 2007-04-28 by Aaron M. Ucko <ucko@debian.org>.
 
 	* scripts/dpkg-shlibdeps.pl: Trim down duplicated files from @libfiles
-	only when passing it to dpkg-query.
+	only when passing it to dpkg-query instead.
 
 2007-05-23  Kylan Robinson  <Kylan_Robinson@selinc.com>
 
