--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-05-24  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Bump version to 1.14.5~.
+
+2007-05-24  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Release 1.14.4.
 
 2007-05-24  Guillem Jover  <guillem@debian.org>
