--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.5) UNRELEASED; urgency=low
+
+  * 
+
+ -- Guillem Jover <guillem@debian.org>  Thu, 24 May 2007 20:06:18 +0300
+
 dpkg (1.14.4) unstable; urgency=low
 
   [ Guillem Jover ]
