--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-05-24  Guillem Jover  <guillem@debian.org>
 
+	* ostable: Add gnulp-linux.
+	* triplettable: Add gnulp-linux-i386 to lpia mapping.
+
+2007-05-24  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Bump version to 1.14.5~.
 
 2007-05-24  Guillem Jover  <guillem@debian.org>
@@ -202,7 +207,7 @@
 2007-05-07  Guillem Jover  <guillem@debian.org>
 
 	* ostable: Add gnueabi-linux.
-	* triplettable: Add gnueabli-linux-arm to armel mapping.
+	* triplettable: Add gnueabi-linux-arm to armel mapping.
 
 2007-05-07  Guillem Jover  <guillem@debian.org>
 
