--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.14.5) UNRELEASED; urgency=low
 
-  * 
+  [ Guillem Jover ]
+  * Add lpia support to ostable and triplettable.
 
  -- Guillem Jover <guillem@debian.org>  Thu, 24 May 2007 20:06:18 +0300
 
