--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-24  Miguel Figueiredo  <elmig@debianpt.org>
+
+	* pt.po: Updated to 921t.
+
 2007-05-24  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
