--- a/po/pt.po
+++ b/po/pt.po
@@ -1,13 +1,13 @@
 # PT translation for dpkg.
 # Copyright (C) 2004 Free Software Foundation, Inc.
-# Miguel Figueiredo <elmig@debianpt.org>, 2004-2006.
+# Miguel Figueiredo <elmig@debianpt.org>, 2004-2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.14\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-05-24 19:33+0300\n"
-"PO-Revision-Date: 2006-08-27 17:41+0100\n"
+"PO-Revision-Date: 2007-05-24 21:04+0100\n"
 "Last-Translator: Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
@@ -57,9 +57,9 @@ msgid "Signal no.%d"
 msgstr "Sinal num.%d"
 
 #: lib/compression.c:34
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec '%s %s'"
-msgstr "%s: falhou executar gzip %s"
+msgstr "%s: falhou executar '%s %s'"
 
 #: lib/compression.c:62
 #, c-format
@@ -1113,7 +1113,7 @@ msgstr "dpkg: o pacote %s requer reinstalação, não irá remover.\n"
 #: src/archives.c:903
 #, c-format
 msgid "package %s has too many Conflicts/Replaces pairs"
-msgstr ""
+msgstr "o pacote %s tem demasiados pares de Conflicts/Replaces"
 
 #: src/archives.c:909
 #, c-format
@@ -1582,39 +1582,39 @@ msgid "unable to check for existence of `%.250s'"
 msgstr "não foi possível verificar a existência de `%.250s'"
 
 #: src/depcon.c:156
-#, fuzzy, c-format
+#, c-format
 msgid "%s depends on %s"
-msgstr " depende de "
+msgstr "%s depende de %s"
 
 #: src/depcon.c:159
-#, fuzzy, c-format
+#, c-format
 msgid "%s pre-depends on %s"
-msgstr " pre-depende de "
+msgstr "%s pre-depende de %s"
 
 #: src/depcon.c:162
-#, fuzzy, c-format
+#, c-format
 msgid "%s recommends %s"
-msgstr " recomenda "
+msgstr "%s recomenda %s"
 
 #: src/depcon.c:165
-#, fuzzy, c-format
+#, c-format
 msgid "%s suggests %s"
-msgstr " sugere "
+msgstr "%s sugere %s"
 
 #: src/depcon.c:168
-#, fuzzy, c-format
+#, c-format
 msgid "%s breaks %s"
-msgstr " danifica "
+msgstr "%s danifica %s"
 
 #: src/depcon.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s conflicts with %s"
-msgstr " em conflito com "
+msgstr "%s em conflito com %s"
 
 #: src/depcon.c:174
-#, fuzzy, c-format
+#, c-format
 msgid "%s enhances %s"
-msgstr " melhora "
+msgstr "%s melhora %s"
 
 #: src/depcon.c:269
 #, c-format
@@ -2879,13 +2879,13 @@ msgid "unable to stat other new file `%.250s'"
 msgstr "Não foi possível fazer stat a outro novo ficheiro `%.250s'"
 
 #: src/processarc.c:674
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - old file `%.250s' is the same as several new files!  (both `"
 "%.250s' and `%.250s')\n"
 msgstr ""
-"dpkg: aviso - ficheiro antigo `%.250s' é o mesmo que vários novos ficheiros! "
-"(ambos `%.250s' e `%.250s')"
+"dpkg: aviso - o ficheiro antigo `%.250s' é o mesmo que vários novos "
+"ficheiros!  (ambos `%.250s' e `%.250s')\n"
 
 #: src/processarc.c:715
 #, c-format
@@ -3357,7 +3357,7 @@ msgstr "dpkg-deb - erro: %s (`%s') não contém quaisquer dígitos\n"
 #: dpkg-deb/build.c:111
 #, c-format
 msgid "file name '%.50s...' is too long"
-msgstr ""
+msgstr "o nome de ficheiro '%.50s...' é demasiado grande"
 
 #: dpkg-deb/build.c:172
 msgid "--build needs a directory argument"
@@ -3938,7 +3938,7 @@ msgstr ""
 "\n"
 
 #: dpkg-deb/main.c:85
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --showformat=<format>            Use alternative format for --show.\n"
@@ -3955,13 +3955,12 @@ msgid ""
 msgstr ""
 "Opções:\n"
 "  --showformat=<formato>           Usar um formato alternativo para --show.\n"
-"  -D\t\t\t\t    Habilitar saída de debug.\n"
-"  --old, --new\t\t\t    Escolher formato do arquivo.\n"
-"  --nocheck                        Suprimir verificação do arquivo "
-"de                                      controlo (construír pacotes maus).\n"
-"  -z#\t\t\t\t    Definir o nível de compressão para a construção.\n"
-"  -Z<type>                         Definir o tipo de compressão para a "
-"construção.\n"
+"  -D				    Habilitar saída de debug.\n"
+"  --old, --new			    Escolher formato do arquivo.\n"
+"  --nocheck                        Suprimir verificação do arquivo de\n"
+"                                     controlo (construír pacotes maus).\n"
+"  -z#				    Definir o nível de compressão para a compilação.\n"
+"  -Z<tipo>                         Definir o tipo de compressão para a compilação.\n"
 "\n"
 
 #: dpkg-deb/main.c:106
@@ -4564,9 +4563,9 @@ msgstr ""
 
 #: scripts/dpkg-divert.pl:78 scripts/dpkg-statoverride.pl:62
 #: scripts/update-alternatives.pl:233
-#, fuzzy, perl-format
+#, perl-format
 msgid "two commands specified: %s and --%s"
-msgstr "dois modos específicados: %s·e·--%s"
+msgstr "dois comandos específicados: %s e --%s"
 
 #: scripts/dpkg-divert.pl:111
 #, perl-format
@@ -5134,7 +5133,7 @@ msgstr ""
 "Copyright (C) 2000-2002 Wichert Akkerman."
 
 #: scripts/update-alternatives.pl:78
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -5178,44 +5177,39 @@ msgstr ""
 "Comandos:\n"
 "  --install <link> <nome> <caminho> <prioridade>\n"
 "    [--slave <link> <nome> <caminho>] ...\n"
-"                           adicionar um grupo de alternativas para o "
-"sistema.\n"
-"  --remove <nome> <caminho>   remover <caminho> do grupo alternativo "
-"<nome>.\n"
-"  --remove-all <nome>      remove grupo <nome> de alternativas de sistema.\n"
-"  --auto <nome>            comuta o link principal <nome> para o modo "
-"automático.\n"
-"  --display <nome>         visualiza informação sobre o grupo <nome>.\n"
-"  --list <nome>            mostra todos os alvos do grupo <nome>.\n"
-"  --config <nome>          mostra alternativas para o grupo <nome> e pede "
-"ao\n"
-"                           utilizador para seleccionar um para usar.\n"
-"  --set <nome> <caminho>      configura o <caminho> como alternativa para "
-"<nome>.\n"
-"  --all                    chama --config para todas as alternativas.\n"
+"                           adicionar um grupo de alternativas ao sistema.\n"
+"  --remove <nome> <caminho>   remover <caminho> do grupo alternativo.\n"
+"  --remove-all <nome>      remover o grupo <nome> das alternativas do sistema.\n"
+"  --auto <nome>            comutar o link principal <nome> para o modo automático.\n"
+"  --display <nome>         mostrar informação sobre o grupo <nome>.\n"
+"  --list <nome>            mostrar todos os alvos do grupo <nome>.\n"
+"  --config <nome>          mostrar alternativas para o grupo <nome> e pede\n"
+"                           ao utilizador para escolher um para utilizar.\n"
+"  --set <nome> <caminho>   configurar o <caminho> como alternativa para <nome>.\n"
+"  --all                    chamar --config para todas as alternativas.\n"
 "\n"
-"<link> link simbólico que aponta para /etc/alternatives/<nome>.\n"
+"<link> é o link simbólico que aponta para %s/<nome>.\n"
 "  (e.g. /usr/bin/pager)\n"
-"<nome> nome primário para este grupo de link.\n"
+"<nome> é o nome primário para este grupo de link.\n"
 "  (e.g. pager)\n"
-"<caminho> local de um dos ficheiros alvo alternativos.\n"
+"<caminho> é o local de um dos ficheiros alvo alternativos.\n"
 "  (e.g. /usr/bin/less)\n"
 "<prioridade> é um inteiro; opções com maior numero tem prioridade mais "
 "elevada em\n"
 "  modo automático.\n"
 "\n"
 "Opções:\n"
-"  --altdir <directório>     altera o directório de alternativas.\n"
-"  --admindir <directório>   altera o directório de administração.\n"
-"  --test                   não executa nada, apenas demonstra.\n"
-"  --verbose                lista todas as operações, mais 'output'.\n"
-"  --quiet                  operação silenciosa, output mínimo.\n"
-"  --help                   mostra esta mensagem de ajuda.\n"
-"  --version                indica a versão.\n"
+"  --altdir <directório>     alterar o directório de alternativas.\n"
+"  --admindir <directório>   alterar o directório de administração.\n"
+"  --test                    não fazer nada, apenas demonstrar.\n"
+"  --verbose                 operação detalhada, mais 'output'.\n"
+"  --quiet                   operação silenciosa, output mínimo.\n"
+"  --help                    mostrar esta mensagem de ajuda.\n"
+"  --version                 mostrar a versão.\n"
 
 #: scripts/update-alternatives.pl:131
 msgid "invalid update mode"
-msgstr ""
+msgstr "modo inválido de actualização"
 
 #: scripts/update-alternatives.pl:135
 #, perl-format
@@ -5506,13 +5500,13 @@ msgid "Removing %s (%s), not appropriate with %s."
 msgstr "A remover %s (%s), não apropriado com %s."
 
 #: scripts/update-alternatives.pl:635
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "There is no program which provides %s.\n"
 "Nothing to configure.\n"
 msgstr ""
-"Existe apenas um programa que fornece %s\n"
-"(%s). Nada para configurar.\n"
+"Existe apenas um programa que disponibiliza %s.\n"
+"Nada para configurar.\n"
 
 #: scripts/update-alternatives.pl:641
 #, perl-format
