--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ dpkg (1.14.5) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Add lpia support to ostable and triplettable.
 
+  [ Updated dpkg translations ]
+  * Portuguese (Miguel Figueiredo).
+
  -- Guillem Jover <guillem@debian.org>  Thu, 24 May 2007 20:06:18 +0300
 
 dpkg (1.14.4) unstable; urgency=low
