--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-01  Clytie Siddall <clytie@riverland.net.au>
+
+	* vi.po: Updated Vietnamese translation.
+
 2007-05-24  Miguel Figueiredo  <elmig@debianpt.org>
 
 	* pt.po: Updated to 921t.
