Updated manpages translation to 1282t.

--- a/man/po/fr.po
+++ b/man/po/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2007-05-15 16:14+0300\n"
-"PO-Revision-Date: 2007-05-17 02:39+0200\n"
+"PO-Revision-Date: 2007-05-17 03:10+0200\n"
 "Last-Translator: Nicolas François <nicolas.francois@centraliens.net>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -539,9 +539,9 @@ msgstr "deb-control"
 
 # type: TH
 #: deb-control.5:3 install-info.8:5
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2007-05-15"
-msgstr "17-06-2006"
+msgstr "15-05-2007"
 
 # type: Plain text
 #: deb-control.5:6
@@ -556,7 +556,6 @@ msgstr "contrôle"
 
 # type: Plain text
 #: deb-control.5:24
-#, fuzzy
 msgid ""
 "Each Debian package contains the master `control' file, which contains a "
 "number of fields, or comments when the line starts with B<'#'>. Each field "
@@ -568,7 +567,8 @@ msgid ""
 "below)."
 msgstr ""
 "Chaque paquet Debian possède un fichier principal de contrôle qui contient "
-"un certain nombre de champs. Chaque champ commence par une étiquette, telle "
+"un certain nombre de champs ou de commentaires pour les lignes commençant "
+"par un caractère « B<#> ». Chaque champ commence par une étiquette, telle "
 "que B<Package> ou B<Version> (la casse n'importe pas), suivie d'un « : », et "
 "du contenu du champ. Les champs sont séparés seulement par des étiquettes de "
 "champ. En d'autres termes, le contenu d'un champ peut s'étendre sur "
@@ -973,7 +973,7 @@ msgstr "EXEMPLE"
 
 # type: Plain text
 #: deb-control.5:203
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "# Comment\n"
 "Package: grep\n"
@@ -996,6 +996,7 @@ msgid ""
 " than Unix grep or egrep. (Regular expressions containing backreferencing\n"
 " will run more slowly, however).\n"
 msgstr ""
+"# Commentaire\n"
 "Package: grep\n"
 "Essential: yes\n"
 "Priority: required\n"
@@ -1279,9 +1280,9 @@ msgstr "deb-substvars"
 
 # type: TH
 #: deb-substvars.5:2
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2007-05-12"
-msgstr "24-11-2006"
+msgstr "12-05-2007"
 
 # type: Plain text
 #: deb-substvars.5:6
@@ -9397,10 +9398,10 @@ msgstr "install-info"
 
 # type: Plain text
 #: install-info.8:8
-#, fuzzy
 msgid "install-info - create or update entry in Info dir file"
 msgstr ""
-"install-info - création ou mise à jour d'une entrée dans le répertoire Info"
+"install-info - Création ou mise à jour d'une entrée dans le fichier dir du "
+"système Info."
 
 # type: Plain text
 #: install-info.8:24
@@ -9417,7 +9418,6 @@ msgstr ""
 
 # type: Plain text
 #: install-info.8:32
-#, fuzzy
 msgid ""
 "B<install-info> creates, updates or removes entries in the Info B<dir> file. "
 "When updating or creating entries, if no description is specified on the "
@@ -9425,10 +9425,9 @@ msgid ""
 "the contents of the file."
 msgstr ""
 "B<install-info> crée, met à jour ou supprime des entrées dans le fichier "
-"B<dir> du répertoire Info. Quand, pour la création ou la mise à jour d'une "
-"entrée, on ne donne aucune description sur la ligne de commande ou dans le "
-"fichier Info, B<install-info> essaye d'en deviner une à travers le contenu "
-"du fichier."
+"B<dir> d'Info. Quand, pour la création ou la mise à jour d'une entrée, on ne "
+"donne aucune description sur la ligne de commande ou dans le fichier Info, "
+"B<install-info> essaye d'en deviner une à travers le contenu du fichier."
 
 # type: Plain text
 #: install-info.8:39
@@ -9469,21 +9468,20 @@ msgstr ""
 "suppression d'entrée) dans le même répertoire que le fichier B<dir (voyez "
 "l'option> B<--infodir).>"
 
+# NOTE: space
 # type: Plain text
 #: install-info.8:66
-#, fuzzy
 msgid ""
 "If I<filename> ends in B<.gz> , it is taken to refer to a file compressed "
 "with GNU gzip; if it doesn't exist, but a corresponding I<filename>B<.gz> "
 "does, the latter is used instead."
 msgstr ""
-"Quand I<nom-de-fichier> se termine par B<.gz> on considère qu'il renvoie à "
+"Quand I<nom-de-fichier> se termine par B<.gz>, on considère qu'il renvoie à "
 "un fichier comprimé avec «\\ GNU gzip\\ »\\ ; s'il n'existe pas, mais qu'il "
 "y a un I<nom-de-fichier>B<.gz> on utilisera ce dernier."
 
 # type: Plain text
 #: install-info.8:71
-#, fuzzy
 msgid ""
 "When adding or updating entries, the file must exist at the path specified "
 "(possibly with an additional B<.gz> extension)."
@@ -9508,7 +9506,6 @@ msgstr ""
 
 # type: Plain text
 #: install-info.8:86
-#, fuzzy
 msgid ""
 "If the removal results in a section becoming empty, the section heading (and "
 "the spare blank line) will be removed as well, unless this is the last "
@@ -9523,13 +9520,12 @@ msgstr ""
 
 # type: Plain text
 #: install-info.8:91
-#, fuzzy
 msgid ""
 "If there are several suitable entries in the B<dir> file, only those in the "
 "first matching contiguous group will be removed and the others silently "
 "ignored."
 msgstr ""
-"Quand il y a plusieurs entrées possibles dans le fichier B<dir,> seules "
+"Quand il y a plusieurs entrées possibles dans le fichier B<dir>, seules "
 "celles qui appartiennent au premier groupe contigu correspondant sont "
 "supprimées\\ ; les autres sont silencieusement ignorées."
 
@@ -9585,7 +9581,6 @@ msgstr "B<--section >I<exp-reg titre>"
 
 # type: Plain text
 #: install-info.8:135
-#, fuzzy
 msgid ""
 "Specifies that if a new entry is to be made, it should be placed in a "
 "section of the B<dir> file whose title matches I<regexp>.  If no such "
@@ -9596,13 +9591,12 @@ msgstr ""
 "Indique que l'entrée qui doit être créée sera placée dans la section du "
 "fichier B<dir> dont le titre correspond à I<exp-reg>. Si une telle section "
 "n'existe pas, une nouvelle dernière section (voyez ci-après) est créée dans "
-"le fichier, avec un titre égal à I<titre.> Une section est un choix possible "
+"le fichier, avec un titre égal à I<titre>. Une section est un choix possible "
 "dans le menu de B<dir>\\ ; les choix sont séparés par des lignes blanches"
 "\\ ; la première ligne est supposée représenter le titre."
 
 # type: Plain text
 #: install-info.8:142
-#, fuzzy
 msgid ""
 "If a new entry is to be created, B<install-info> will attempt to insert it "
 "within the section in alphabetic order. If the entries in the section aren't "
@@ -9610,7 +9604,7 @@ msgid ""
 "The order of existing entries will not be changed."
 msgstr ""
 "Quand une nouvelle entrée doit être créée, B<install-info> essaye de "
-"l'insérer dans la section selon l'ordre alphabétique ; si les entrées de la "
+"l'insérer dans la section selon l'ordre alphabétique. Si les entrées de la "
 "section ne sont pas déjà triées, on ne peut prévoir l'emplacement qui sera "
 "choisi. L'ordre existant des entrées n'est pas modifié."
 
@@ -9620,15 +9614,16 @@ msgid ""
 "If the B<--section> option is not specified, B<install-info> will look for a "
 "title in the Info file itself by looking for an entry of the form"
 msgstr ""
+"Si l'option B<--section> n'est pas spécifiée, B<install-info> recherchera un "
+"titre dans le fichier Info lui-même, en recherchant une entrée de la forme :"
 
 # type: Plain text
 #: install-info.8:152
 msgid "B<INFO-DIR-SECTION>I< title>"
-msgstr ""
+msgstr "B<INFO-DIR-SECTION>I< titre>"
 
 # type: Plain text
 #: install-info.8:160
-#, fuzzy
 msgid ""
 "If no section title is found, the default is to append new entries to the "
 "end of the file. The last section (even if it only consists of the title "
@@ -9636,16 +9631,15 @@ msgid ""
 "right place. The final section should be titled to reflect the fact that "
 "Info files with no better specified location are appended to it."
 msgstr ""
-"Par défaut, les entrées nouvelles sont ajoutées à la fin du fichier. La "
-"dernière section doit toujours exister (même si elle consiste en une simple "
-"ligne de titre) de manière que les nouvelles sections puissent être créées "
-"au bon endroit. Le titre de la dernière section devrait refléter le fait que "
-"des fichiers Info sans emplacement bien défini sont ajoutés à la fin de "
-"cette section."
+"Par défaut, si aucun titre de section n'est trouvé, les entrées nouvelles "
+"sont ajoutées à la fin du fichier. La dernière section doit toujours exister "
+"(même si elle consiste en une simple ligne de titre) de manière que les "
+"nouvelles sections puissent être créées au bon endroit. Le titre de la "
+"dernière section devrait refléter le fait que des fichiers Info sans "
+"emplacement bien défini sont ajoutés à la fin de cette section."
 
 # type: Plain text
 #: install-info.8:163
-#, fuzzy
 msgid ""
 "If there is already an entry for the Info file being installed, it is "
 "replaced in situ with the new entry."
@@ -9655,7 +9649,6 @@ msgstr ""
 
 # type: Plain text
 #: install-info.8:166
-#, fuzzy
 msgid ""
 "If a section is specified when removing an entry, the section is ignored and "
 "a warning is issued."
@@ -9665,7 +9658,6 @@ msgstr ""
 
 # type: Plain text
 #: install-info.8:172
-#, fuzzy
 msgid ""
 "If a section is requested when adding an entry, but the file contains no "
 "section headings at all, then B<install-info> will create both the requested "
@@ -9700,7 +9692,6 @@ msgstr "B<--align=>I<nnn>B< [déconseillé]>"
 
 # type: Plain text
 #: install-info.8:190
-#, fuzzy
 msgid ""
 "Specifies that the first line of the description should be indented at least "
 "I<nnn> characters; extra spaces will be added as required. If necessary "
@@ -9746,7 +9737,6 @@ msgstr ""
 
 # type: Plain text
 #: install-info.8:207
-#, fuzzy
 msgid ""
 "Prevents the usual display of the new menu entry just before it is inserted "
 "and of the messages announcing the replacement and removal of existing "
@@ -9803,7 +9793,6 @@ msgstr "B<END-INFO-DIR-ENTRY>"
 
 # type: Plain text
 #: install-info.8:239
-#, fuzzy
 msgid ""
 "If the entry found in the Info file itself extends across several lines, "
 "each giving a menu entry, the text found in the file is used verbatim. In "
@@ -9820,7 +9809,6 @@ msgstr ""
 
 # type: Plain text
 #: install-info.8:246
-#, fuzzy
 msgid ""
 "If there is no B<dir> entry in the file, the program will try to find a "
 "paragraph early in the file starting B<this file documents>.  It will "
@@ -9839,7 +9827,6 @@ msgstr ""
 
 # type: Plain text
 #: install-info.8:252
-#, fuzzy
 msgid ""
 "If a description argument is given when B<--remove> is specified, it is "
 "ignored and a warning is issued."
@@ -9855,7 +9842,6 @@ msgstr "B<--menuentry=>I<xxx>"
 
 # type: Plain text
 #: install-info.8:261
-#, fuzzy
 msgid ""
 "Specifies that the entry in the menu should be I<xxx>.  The default is to "
 "use the the value specified in the Info file itself.  If this is not "
@@ -9872,7 +9858,6 @@ msgstr ""
 
 # type: Plain text
 #: install-info.8:268
-#, fuzzy
 msgid ""
 "When removing entries, the value of the B<--menuentry> option must match the "
 "actual menu entry field in the menu item to be removed (case not "
@@ -9901,33 +9886,32 @@ msgstr ""
 
 # type: Plain text
 #: install-info.8:276
-#, fuzzy
 msgid ""
 "If the file being installed already has an entry in the Info B<dir> file, "
 "the old entry will be left alone instead of being replaced; the default is "
 "to overwrite any old entry found with the newly generated one."
 msgstr ""
 "Quand le fichier qu'on doit installer possède déjà une entrée dans le "
-"répertoire, l'ancienne entrée est laissée seule plutôt que remplacée. Par "
-"défaut, toute entrée ancienne trouvée est remplacée par la nouvelle."
+"fichier B<dir> d'Info, l'ancienne entrée est laissée seule plutôt que "
+"remplacée. Par défaut, toute entrée ancienne trouvée est remplacée par la "
+"nouvelle."
 
 # type: Plain text
 #: install-info.8:281
-#, fuzzy
 msgid ""
 "If B<--remove> is specified, B<--keep-old> will prevent the removal of the "
 "section heading which would otherwise happen if the section is made empty by "
 "the removal."
 msgstr ""
-"Quand l'option B<--remove> est indiquée B<,>--keep-old empêche la "
+"Quand l'option B<--remove> est indiquée, B<--keep-old> empêche la "
 "suppression de l'en-tête de section qui sans cela serait supprimé si la "
 "suppression vidait la section."
 
 # type: Plain text
 #: install-info.8:284
-#, fuzzy
 msgid "Enables test mode, which inhibits the update of the Info B<dir> file."
-msgstr "Met en mode test, lequel empêche la mise à jour du fichier dir."
+msgstr ""
+"Met en mode test, lequel empêche la mise à jour du fichier B<dir> d'Info."
 
 # type: Plain text
 #: install-info.8:288
