--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-02  Nicolas Francois  <nicolas.francois@centraliens.net>
+
+	* po/fr.po: Updated to 1282t.
+
 2007-05-24  Guillem Jover  <guillem@debian.org>
 
 	* po/fr.po: Merged with dpkg-man.pot.
