--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ dpkg (1.14.5) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Portuguese (Miguel Figueiredo).
+  * Estonian (Ivar Smolin). Closes: #427589
 
  -- Guillem Jover <guillem@debian.org>  Thu, 24 May 2007 20:06:18 +0300
 
