--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-05  Ivar Smolin  <okul@linux.ee>
+
+	* et.po: Updated to 441t480u
+
 2007-06-01  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
