Updated dselect translation

--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-05  Christian Perrier  <bubulle@debianpt.org>
+
+	* fr.po: Updated to 285t.
+
 2007-05-25  Miguel Figueiredo  <elmig@debianpt.org>
 
 	* pt.po: Updated to 285t.
