--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ dpkg (1.14.5) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Add lpia support to ostable and triplettable.
 
+  [ Updated dselect translations ]
+  * French (Christian Perrier)
+  
   [ Updated dpkg translations ]
   * Portuguese (Miguel Figueiredo).
   * Estonian (Ivar Smolin). Closes: #427589
