Fix dpkg-source to not emit duplicated entries for the Architecture field in the .dsc file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-06  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-source.pl (%archadded): Move to an outer scope to
+	avoid duped entries in the output Architecture field.
+
 2007-05-24  Guillem Jover  <guillem@debian.org>
 
 	* ostable: Add gnulp-linux.
