--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ dpkg (1.14.5) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Add lpia support to ostable and triplettable.
+  * Fix dpkg-source to not emit duplicated entries for the Architecture field
+    in the .dsc file.
 
   [ Updated dselect translations ]
   * French (Christian Perrier)
