Add '.shelf' to the default dpkg-source -i regex. Closes: #427827 Thanks to Adeodato Simó.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-06-06  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-source.pl ($diff_ignore_default_regexp): Add '.shelf'.
+
+2007-06-06  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-source.pl (%archadded): Move to an outer scope to
 	avoid duped entries in the output Architecture field.
 
