--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ dpkg (1.14.5) UNRELEASED; urgency=low
   * Add lpia support to ostable and triplettable.
   * Fix dpkg-source to not emit duplicated entries for the Architecture field
     in the .dsc file.
+  * Add '.shelf' to the default dpkg-source -i regex. Closes: #427827
+    Thanks to Adeodato Simó.
 
   [ Updated dselect translations ]
   * French (Christian Perrier)
