Update German man pages to 1019t16f247u

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-09  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1019t16f247u.
+
 2007-06-02  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* po/fr.po: Updated to 1282t.
