--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ dpkg (1.14.5) UNRELEASED; urgency=low
   * Portuguese (Miguel Figueiredo).
   * Estonian (Ivar Smolin). Closes: #427589
 
+  [ Updated man pages translations ]
+  * German (Helge Kreutzmann).
+
  -- Guillem Jover <guillem@debian.org>  Thu, 24 May 2007 20:06:18 +0300
 
 dpkg (1.14.4) unstable; urgency=low
