--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-06-12  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-scanpackages.pl: Move check for existence of $override
+	outside load_override. Move load_override after having filled the
+	%packages information.
+	(load_override): Assume $override is always defined.
+
 2007-06-06  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-source.pl ($diff_ignore_default_regexp): Add '.shelf'.
